discussion/kv_engine/168009/168009_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Test Clang-tidy fix

Change-Id: I5a570e02ea8977040ec70d7987b4e189bffaeb8c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-01-28 17:34:33.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-28 18:08:03.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15212/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4863/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17988/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16919/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25335/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17236/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17236/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16032/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16032/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4925/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4925/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14056/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43428/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36663/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
